landingcorp/css/_template.scss
/* ... */
// Slider Section
.slider_section {
  position: relative;
  // NOTE: Why calculated?
  padding-bottom: calc(128px + 58px);
  padding-top: calc(168px);
  background-color: $backgroundInversePrimaryColor;

  .info {
    h3 {
      color: $foregroundInversePrimaryColor;
      font-size: 3.5rem;
      font-weight: 700;
      line-height: 4.25rem;
    }
    p {
      color: $foregroundInverseSecondaryColor;
      margin: 25px 75px;
      font-size: 18px;
    }
    .search_wrapper {
      font-size: 0;
      input {
        width: 320px;
        height: 55px;
        font-size: 15px;
        border: 0;
        padding: 15px;

        &:focus {
          border: 0;
        }
      }
      button {
        background-color: $accentPrimaryColor;
        border: 0;
        height: 55px;
        font-size: 15px;
        color: $foregroundInversePrimaryColor;
        padding: 15px;

        &:focus {
          border: none;
        }
      }
    }
    .sales_team_link {
      display: inline-block;
      margin-top: 30px;
      color: $foregroundInversePrimaryColor;
      transition: all 0.5s ease-in-out;

      svg {
        color: $accentPrimaryColor;
        transform: translateX(0px);
        transition: all 0.5s ease-in-out;
      }

      &:hover {
        text-decoration: none;
        svg {
          transform: translateX(3px);
        }
      }
    }
  }
}

// News Section
.news_section {
  background: $backgroundSecondaryColor;
  .news_section_container {
    background-color: $backgroundPrimaryColor;
    position: relative;
    top: -60px;
    display: flex;
    justify-content: flex-start;
    cursor: pointer;

    .single_news {
      padding: 15px 20px 15px 20px;

      &:first-child {
        padding-top: 30px;
      }
      &:last-child {
        padding-bottom: 30px;
      }

      &:hover {
        background-color: $accentPrimaryColor;
        .highlight {
          color: $foregroundInversePrimaryColor;
        }
        h3 {
          color: $foregroundInversePrimaryColor;
        }
        p {
          color: $foregroundInversePrimaryColor;
        }
      }

      .highlight {
        font-size: $extraSmallSize;
        color: $foregroundSecondaryColor;
        text-transform: uppercase;
        transition: all 0.3s ease-in-out;
      }
      h3 {
        font-size: 1.2rem;
        font-weight: 700;
        transition: all 0.3s ease-in-out;
      }
      p {
        font-size: $smallSize;
        text-transform: capitalize;
        color: $accentPrimaryColor;
        margin-top: 15px;
        margin-bottom: 0;
        transition: all 0.3s ease-in-out;
      }
    }
  }
}

// Trusted Section
.trusted_logo {
  background-color: $backgroundSecondaryColor;
  padding: 40px 0 80px 0;

  .logo_list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    .single_logo {
      margin: 0 auto;
    }
  }
}

// Solution Section
.solution_section {
  padding: 90px 0;

  ol {
    li {
      a {
        padding: 40px 30px;
        background-color: $backgroundSecondaryColor;
        display: inline-block;

        &:hover {
          color: $accentPrimaryColor;
          .single_solution {
            .body {
              h3 {
                color: $accentPrimaryColor;
              }
            }
          }
        }

        .single_solution {
          display: table;
          cursor: pointer;

          &:hover {
            .body {
              span {
                svg {
                  transform: translateX(3px);
                }
              }
            }
          }

          .icon {
            display: table-cell;
            vertical-align: top;
          }
          .body {
            margin-left: 20px;
            h3 {
              font-size: 1.5rem;
              line-height: 1.417em;
              font-weight: 400;
              margin: 0 0 8px;
              strong {
                font-weight: 700;
              }
            }
            p {
              font-size: 0.938rem;
              letter-spacing: 0.01em;
              line-height: 1.667em;
              margin: 0 0 16px;
              color: $foregroundSecondaryColor;
            }
            span {
              display: inline-block;
              color: $accentPrimaryColor;

              svg {
                transform: translateX(0);
              }
            }
          }
        }
      }
    }
  }
}
/* ... */

